<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">JustJava</string>
    <!-- Hint text display in the empty field for the user's name [CHAR LIMIT=20] -->
    <string name="name">Name</string>
    <!-- Text display for the toppings TextView -->
    <string name="toppings">Toppings</string>
    <!-- Checkbox for Whipped Cream topping -->
    <string name="whipped_cream">Whipped Cream</string>
    <!-- Checkbox for Chocolate topping -->
    <string name="chocolate">Chocolate</string>
    <!-- Quantity Text display -->
    <string name="quantity">Quantity</string>
    <!-- Order button that sends mailto intent to the app -->
    <string name="order">Order</string>
    <!--
     Subject line for the order summary email. It will be in the format of
     "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
   -->
    <string name="email_subject">JustJava order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--
    Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
    user's name. [CHAR LIMIT=NONE]
  -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--
     Whipped cream topping for the order summary. It will be shown in the format of
     "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_whipped_cream">Add whipped cream for $2 <xliff:g id="hasWhippedCream" example="Yes">%b</xliff:g></string>
    <!--
     Chocolate topping for the order summary. It will be shown in the format of
     "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_chocolate">Add chocolate for $1? <xliff:g id="hasChocolate" example="No">%b</xliff:g></string>
    <!--
     Quantity of coffee cups for the order summary. It will be shown in the format of
     "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="5">%s</xliff:g></string>
    <!--
     Total price for the order summary. It will be shown in the format of
     "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
   -->
    <string name="order_summary_total">Total: $<xliff:g id="price" example="$10">%s</xliff:g></string>
    <!-- Thank you message for the order summary. [CHAR LIMIT=NONE] -->
    <string name="thank_you">Thank You!</string>

</resources>
