<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_field"
        android:hint="@string/name"
        android:inputType="text"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>



    <TextView
        style="@style/HeaderTextStyle"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:padding="16dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/whipped_cream"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/chocolate"/>


    <TextView
        style="@style/HeaderTextStyle"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/quantity"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">


        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="-"
            android:onClick="decrement"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantity_text_view"
            android:paddingLeft="8dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="0" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:text="+"
            android:onClick="increment"/>



    </LinearLayout>









    <Button
        android:layout_width="88dp"
        android:layout_height="36dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:fontFamily="Roboto medium"
        />




</LinearLayout>
</ScrollView>